# linux

./: .clang-format  CMakeLists.txt
include/: lib.h
src/: cp.c  lib.c  seek.c  tee.c  tee.cpp
